tests/fixtures/subdomains/invalid/duplicate-bc/strategic/subdomain-catalog.cue
package mesh_spec

subdomainCatalog: {
	subdomains: [Code=string]: #Subdomain & {code: Code}
}
